--- a/Projekt_Teknologji_dotNet/Content/Site.css
+++ b/Projekt_Teknologji_dotNet/Content/Site.css
@@ -1,12 +1,24 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+.Header-content {
+    background-image: url(../../Content/Imazhet/Imazhet_Statike/newC.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.all-content {
+    height: 100vh;
+}
+
+body {
+    background-color: #fff;
+    font-family: "Roboto", sans-serif;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -15,10 +27,246 @@
 .dl-horizontal dt {
     white-space: normal;
 }
-
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
 textarea {
-    max-width: 280px;
+    max-width: 100%;
+}
+
+
+/*Contact page style*/
+.top {
+    display: flex;
+    justify-content: center;
+}
+
+.bottom {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+form {
+    width: 60%;
+}
+
+    form textarea {
+        resize: none;
+    }
+
+.col-md-6 {
+    margin-bottom: 15px;
+}
+
+/*Responsive*/
+@media (max-width: 600px) {
+    .max-width-c {
+        padding: 0 20px;
+    }
+
+    .contact {
+        display: inline;
+    }
+
+    .left {
+        width: 100%;
+    }
+
+    .right {
+        width: 100%;
+    }
+
+    .contact .right form .fields {
+        display: block;
+    }
+
+    .footer-bottom .fb-right {
+        width: 55%;
+    }
+
+    .footer-bottom .fb-left {
+        width: 35%;
+    }
+
+    .footer-bottom i {
+        font-size: 26px;
+    }
+}
+
+.navbar-content {
+    background-color: black;
+    width: 100%;
+}
+
+    .navbar-content a {
+        text-decoration: none;
+        color: white;
+    }
+
+.main-content {
+    border: 1px solid;
+    height: 100vh;
+}
+
+    .main-content h2 {
+        text-align: center;
+    }
+
+.max-width-c {
+    padding: 0 50px;
+}
+
+.container-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.right-content {
+    width: 55%;
+}
+
+    .right-content ul {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        list-style: none;
+        color: white;
+        padding: 0;
+        margin: 0;
+    }
+
+        .right-content ul li a {
+            text-decoration: none;
+            color: white;
+        }
+
+.nav-right {
+    width: 35%;
+}
+/* .content eshte per paragrafin dhe caktoni nje takim*/
+.content {
+    font-size: 3rem;
+    margin: auto;
+    max-width: 100%;
+    color: navajowhite;
+}
+
+    .content h1 {
+        color: #00c2ff;
+        margin-bottom: 0;
+    }
+
+nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+    nav .logo {
+        font-size: 2.5rem;
+        font-size: 35px;
+        color: white;
+    }
+
+    nav ul {
+        display: flex;
+        list-style-type: none;
+        padding: 0;
+    }
+
+    nav li a {
+        color: black;
+        padding: 1rem;
+        text-decoration: none;
+        font-size: 18px;
+    }
+
+.selected {
+    font-weight: bold;
+}
+
+.highlight {
+    background-color: #00c2ff;
+    color: white;
+    padding: 1rem;
+    text-decoration: none;
+}
+
+.about-content {
+    height: 100vh;
+}
+
+footer {
+    background-color: #000;
+    color: #fff;
+    padding: 1rem;
+}
+
+    footer ul {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        list-style-type: none;
+        padding: 0;
+    }
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.fb-right {
+    width: 55%;
+}
+
+.fb-left {
+    width: 15%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-bottom i {
+    font-size: 32px;
+    color: white;
+}
+
+footer strong {
+    color: #00c2ff;
+}
+
+footer p {
+    margin: 0;
+}
+
+@media screen and (max-width: 700px) {
+    .content {
+        font-size: 1.4rem;
+        margin: 2rem auto 0;
+    }
+
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav li:not(:last-child) {
+        margin-bottom: 1rem;
+    }
+
+    nav .highlight {
+        display: none;
+    }
+
+    footer ul {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    footer li {
+        margin: 1rem;
+        text-align: center;
+    }
 }
