--- a/Projekt_Teknologji_dotNet/Views/Account/Register.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Account/Register.cshtml
@@ -2,7 +2,8 @@
 @{
     ViewBag.Title = "Register";
 }
-
+<div class="all-content">
+<div class="max-width-c">
 <h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -35,6 +36,8 @@
         </div>
     </div>
 }
+    </div>
+    </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
