--- a/Projekt_Teknologji_dotNet/Views/Home/Contact.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Home/Contact.cshtml
@@ -1,17 +1,48 @@
-﻿@{
-    ViewBag.Title = "Contact";
+﻿@model Projekt_Teknologji.NET.Models.Contact
+
+@Styles.Render("~/Content/css")
+@Scripts.Render("~/bundles/modernizr")
+<div class="contact">
+    <div class="max-width-c">
+        <h2>Na kontaktoni</h2>
+        @if (ViewBag.Msg != null)
+        {
+            <div class="alert alert-success">@ViewBag.Msg</div>
+        }
+        <div class="top">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                <div class="form-row" id="first">
+                    <div class="col-md-6">
+                        @Html.TextBoxFor(m => m.Emri, new { @placeholder = "Emri", @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Emri, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-md-6">
+                        @Html.TextBoxFor(m => m.Email, new { @placeholder = "Email", @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group col-md-12">
+                    @Html.TextBoxFor(m => m.Subjekti, new { @placeholder = "Subjekti", @class = "form-control" })
+                </div>
+                <div class="form-group col-md-12">
+                    @Html.TextAreaFor(m => m.Mesazhi, new { @placeholder = "Mesazhi...", @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Mesazhi, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group col-lg-12">
+                    <input class="btn btn-primary" type="submit" value="Dërgo mesazhin" id="submit">
+                </div>
+            }
+        </div>
+        <h2>Harta</h2>
+        <div class="bottom">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2996.153103464319!2d19.81600641457006!3d41.32728400768346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1350310ffc466d8b%3A0x5a0007debef988e6!2sSheshi%20Sk%C3%ABnderbej%2C%20Tirana%2C%20Shqip%C3%ABria!5e0!3m2!1ssq!2s!4v1640169746465!5m2!1ssq!2s" , width="670" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+    </div>
+</div>
+
+@section scripts{
+    @Scripts.Render("~/bundles/jqueryval")
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
