--- a/Projekt_Teknologji_dotNet/Views/Shared/_Layout.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Shared/_Layout.cshtml
@@ -3,39 +3,59 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
+    <div class="navbar-content">
+        <div class="max-width-c">
+            <nav class="container-nav">
+                <div class="logo"><i class="fas fa-car">@Html.ActionLink("ALBARENT", "Index", "Home")</i></div>
+                <div class="right-content">
+                    <ul>
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("About Us", "About", "Home")</li>
+                        @Html.Partial("_LoginPartial")
+                    </ul>
+                </div>
+            </nav>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
+    <footer>
+        <div class="max-width-c">
+            <ul class="container">
+                <li>
+                    <strong>Vendndodhja jone</strong>
+                    <p>Rruga e Barrikadave</p>
+                </li>
+                <li>
+                    <strong>Numri i telefonit</strong>
+                    <p>0693521765</p>
+                </li>
+                <li>
+                    <strong>Email</strong>
+                    <p>albarent@shitje.com</p>
+                </li>
+            </ul>
+            <div class="footer-bottom">
+                <div class="fb-right">&copy; @DateTime.Now.Year  -  Te gjitha te drejtat e rezervuara</div>
+                <div class="fb-left">
+                    <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/adii_korici__/" class="instagram"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/admirim-kori%C3%A7i-439115172/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
