--- a/Projekt_Teknologji_dotNet/Views/Account/Login.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Account/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@using Projekt_Teknologji.NET.Models
-@model LoginViewModel
+﻿@model Projekt_Teknologji_dotNet.Models.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
@@ -53,9 +52,7 @@
                 </section>
             </div>
             <div class="col-md-4">
-                <section id="socialLoginForm">
-                    @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-                </section>
+                
             </div>
         </div>
     </div>
