--- a/Projekt_Teknologji_dotNet/Views/Home/Contact.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Home/Contact.cshtml
@@ -1,4 +1,4 @@
-﻿@model Projekt_Teknologji.NET.Models.Contact
+﻿@model Projekt_Teknologji_dotNet.Models.Contact
 
 @Styles.Render("~/Content/css")
 @Scripts.Render("~/bundles/modernizr")
