--- a/Projekt_Teknologji_dotNet/Views/Makinats/Delete.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Makinats/Delete.cshtml
@@ -53,27 +53,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IMG1)
+            @Html.DisplayNameFor(model => model.IMG)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IMG1)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IMG2)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IMG2)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IMG3)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IMG3)
+            @Html.DisplayFor(model => model.IMG)
         </dd>
 
     </dl>
