--- a/Projekt_Teknologji_dotNet/Views/Makinats/Create.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Makinats/Create.cshtml
@@ -61,26 +61,10 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.IMG1, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.IMG, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.IMG1, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.IMG1, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.IMG2, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.IMG2, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.IMG2, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.IMG3, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.IMG3, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.IMG3, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.IMG, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.IMG, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
