--- a/Projekt_Teknologji_dotNet/Views/Makinats/Index.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Makinats/Index.cshtml
@@ -29,14 +29,9 @@
                     @Html.DisplayNameFor(model => model.Kosto1Dite)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.IMG1)
+                    @Html.DisplayNameFor(model => model.IMG)
                 </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.IMG2)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.IMG3)
-                </th>
+                
                 <th></th>
             </tr>
 
@@ -59,14 +54,9 @@
                         @Html.DisplayFor(modelItem => item.Kosto1Dite)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.IMG1)
+                        @Html.DisplayFor(modelItem => item.IMG)
                     </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.IMG2)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.IMG3)
-                    </td>
+                    
                     <td>
                         @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
                         @Html.ActionLink("Details", "Details", new { id = item.ID }) |
