--- a/Projekt_Teknologji_dotNet/Views/Home/Index.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
             {
             <div class="Tip-cart">
                 <div class="img-content">
-                    <img src="#" alt="@item.Emri" />
+                    <img src="~/Content/Imazhet/Uploaded/@Html.DisplayFor(modelItem => item.Ikona )" alt="@item.Emri" />
                 </div>
                 <div class="ActionLink-content">
                     <a href="Makinats/Index?tipi=@item.Emri">@item.Emri</a>
