--- a/Projekt_Teknologji_dotNet/Views/Tipis/Create.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Tipis/Create.cshtml
@@ -29,7 +29,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Ikona, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Ikona, new { @class = "form-control" })
+                <input type="file" name="Ikona" class="form-control" />
                 @Html.ValidationMessageFor(model => model.Ikona, "", new { @class = "text-danger" })
             </div>
         </div>
