--- a/Projekt_Teknologji_dotNet/Views/Shared/_Layout.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     </div>
                     @using (Html.BeginForm("Kerko", "Home", FormMethod.Get))
                     {
-                        <input type="text" name="q" class="s-input" placeholder="Kerko" />
+                        <input type="text" name="q" class="s-input" placeholder="Kerko" required />
                         <input type="submit" value="Kerko" class="s-btn" />
                     }
                 </div>
