--- a/Projekt_Teknologji_dotNet/Views/Home/Kerko.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Home/Kerko.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="all-content">
     <div class="max-width-c">
-<h2>Rezultatet e kerkimit</h2>
+<h2>Rezultatet e kerkimit per: @ViewBag.msg2</h2>
 @if (ViewBag.msg != null)
 {
     <h2>@ViewBag.msg</h2>
@@ -26,7 +26,7 @@ else
                     </div>
                     <div class="b-con">
                         <div>@Html.LabelFor(modelItem => item.Vit_Prodhimi): @Html.DisplayFor(modelItem => item.Vit_Prodhimi)</div>
-                        <div>@Html.LabelFor(modelItem => item.Kosto1Dite): @Html.DisplayFor(modelItem => item.Kosto1Dite)$</div>
+                        <div>@Html.LabelFor(modelItem => item.Kosto1Dite): @Html.DisplayFor(modelItem => item.Kosto1Dite)£</div>
                     </div>
                     <div class="button-area">
                         @Html.ActionLink("See More", "Details", "Makinats", new { id = item.ID }, new { @class = "btn btn-primary" })
