Berja funksionale e rezervimit te nje makine(e paperfunduar)

--- a/Projekt_Teknologji_dotNet/Views/Makinats/Details.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Makinats/Details.cshtml
@@ -66,6 +66,7 @@
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Back to List", "Index")
+    <a href="/Rezervimet/Create?makineId=@Model.ID">Rezervo</a>
 </p>
 </div>
     </div>
