--- a/Projekt_Teknologji_dotNet/Views/Rezervimet/Index.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Rezervimet/Index.cshtml
@@ -4,12 +4,10 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<div class="all-content">
+    <div class="max-width-c">
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -56,3 +54,5 @@
 }
 
 </table>
+        </div>
+    </div>
