--- a/Projekt_Teknologji_dotNet/Views/Makinats/Details.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Makinats/Details.cshtml
@@ -7,66 +7,65 @@
 <div class="all-content">
     <div class="max-width-c">
 
-<h2>Details</h2>
+        <h2>Details</h2>
+        <div>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Tipi.Emri)
+                </dt>
 
-<div>
-    <h4>Makinat</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Tipi.Emri)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Tipi.Emri)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Tipi.Emri)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Modeli)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Modeli)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Modeli)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Modeli)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Pershkrimi)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Pershkrimi)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Pershkrimi)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Pershkrimi)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Vit_Prodhimi)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Vit_Prodhimi)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Vit_Prodhimi)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Vit_Prodhimi)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Kosto1Dite)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Kosto1Dite)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Kosto1Dite)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Kosto1Dite)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.IMG)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IMG)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.IMG)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.IMG)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
-    <a href="/Rezervimet/Create?makineId=@Model.ID">Rezervo</a>
-</p>
-</div>
+            </dl>
+        </div>
+        <p>
+            @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+            @Html.ActionLink("Back to List", "Index") |
+            <a href="/Rezervimet/Create?makineId=@Model.ID">Rezervo</a>
+        </p>
+            </div>
     </div>
+
