--- a/Projekt_Teknologji_dotNet/Content/Site.css
+++ b/Projekt_Teknologji_dotNet/Content/Site.css
@@ -160,6 +160,29 @@ form {
 .nav-right {
     width: 35%;
 }
+/*Drop-Down-List styling*/
+
+ul.sub {
+    display: none;
+    position: absolute;
+    background-color: black;
+    padding: 4px 6px;
+    border-radius: 0 0 8px 8px;
+}
+
+.main .head-list a {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main .sub a {
+    padding: 0;
+}
+.main .sub a:hover {
+    color: red;
+    transition: 0.3s;
+}
 /* .content eshte per paragrafin dhe caktoni nje takim*/
 .content {
     font-size: 3rem;
@@ -303,7 +326,12 @@ footer p {
 .img-content {
     width: 100%;
     height: 120px;
-    border: 1px solid;
+    display: flex;
+    justify-content: center;
+}
+.img-content img {
+    height: 120px;
+    width: 200px;
 }
 .katalogu-content .Tip-cart .ActionLink-content {
     width: 100%;
