--- a/Projekt_Teknologji_dotNet/Views/Makinats/Create.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Makinats/Create.cshtml
@@ -10,7 +10,7 @@
         <h2>Create</h2>
 
 
-        @using (Html.BeginForm())
+        @using (Html.BeginForm("Create", "Makinats", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
 
@@ -63,7 +63,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.IMG, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.IMG, new { htmlAttributes = new { @class = "form-control" } })
+                        <input type="file" name="IMG" class="form-control" />
                         @Html.ValidationMessageFor(model => model.IMG, "", new { @class = "text-danger" })
                     </div>
                 </div>
