--- a/Projekt_Teknologji_dotNet/Views/Tipis/Create.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Tipis/Create.cshtml
@@ -10,7 +10,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Tipis", FormMethod.Post, new { enctype = "multipart/form-data"}))
 {
     @Html.AntiForgeryToken()
     
