Autorizimi dhe Autentifikimi sipas perdoruesve dhe seksioni i Administratorit

--- a/Projekt_Teknologji_dotNet/Views/Home/Kerko.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Home/Kerko.cshtml
@@ -17,7 +17,7 @@
                 {
                     <div class="car-cart" id="makine@(item.ID)">
                         <div class="img-content">
-                            <img src="#" alt="@Html.DisplayFor(modelItem => item.IMG)" />
+                            <img src="~/Content/Imazhet/Cars-Img/@Html.DisplayFor(modelItem => item.IMG)" alt="@Html.DisplayFor(modelItem => item.IMG)" />
                         </div>
                         <div class="main-content-cart">
                             <div class="a-con">
