--- a/Projekt_Teknologji_dotNet/Views/Makinats/Index.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Makinats/Index.cshtml
@@ -49,7 +49,7 @@
                                     </svg>
                                 }
                                 </div>
-                                @if (Request.IsAuthenticated)
+                                @if (Request.IsAuthenticated && User.Identity.Name == "admirimkorici05@gmail.com")
                                 {
                                     <div class="fshirje-btn" id="@item.ID">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-trash" viewBox="0 0 16 16">
