--- a/Projekt_Teknologji_dotNet/Content/Site.css
+++ b/Projekt_Teknologji_dotNet/Content/Site.css
@@ -11,9 +11,9 @@
     height: 100vh;
     width: 100%;
 }
-
 .all-content {
-    height: 100vh;
+    min-height: 100vh;
+    margin-bottom: 20px;
 }
 
 body {
@@ -103,6 +103,9 @@ form {
     .navbar-content a {
         text-decoration: none;
         color: white;
+    }
+    .main-content {
+        margin-bottom: 20px;
     }
 
     .main-content h2 {
@@ -310,28 +313,27 @@ footer p {
 /*Katalogu styling*/
 .katalogu-content {
     width: 100%;
-    height: 100vh;
     display: grid;
     grid-template-columns: 2fr 2fr 2fr;
-    grid-template-rows: 200px 200px 200px;
+    grid-template-rows: 230px 230px 230px;
     grid-gap: 70px;
 }
 .Tip-cart {
     border: 1px solid gray;
     border-radius: 7px;
     padding: 1em;
-    height: 200px;
+    height: 230px;
     box-shadow: 5px 10px 18px #888888;
 }
 .img-content {
     width: 100%;
-    height: 120px;
+    height: 130px;
     display: flex;
     justify-content: center;
 }
 .img-content img {
-    height: 120px;
-    width: 200px;
+    height: 130px;
+    width: 210px;
 }
 .katalogu-content .Tip-cart .ActionLink-content {
     width: 100%;
@@ -344,10 +346,9 @@ footer p {
 /*Car styling*/
 .car-content {
     width: 100%;
-    height: 100vh;
     display: grid;
     grid-template-columns: 2fr 2fr 2fr 2fr;
-    grid-template-rows: 290px 290px 290px 290px;
+    grid-template-rows: 300px 300px 300px 300px;
     grid-gap: 30px;
 }
 
@@ -355,7 +356,7 @@ footer p {
     border: 1px solid gray;
     border-radius: 7px;
     padding: 1em;
-    height: 290px;
+    height: 300px;
     box-shadow: 5px 10px 18px #888888;
 }
 
