--- a/Projekt_Teknologji_dotNet/Views/Rezervimet/Delete.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Rezervimet/Delete.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="all-content">
+    <div class="max-width-c">
 
 <h2>Delete</h2>
 
@@ -63,3 +65,5 @@
         </div>
     }
 </div>
+        </div>
+    </div>
