--- a/Projekt_Teknologji_dotNet/Views/Tipis/Edit.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Tipis/Edit.cshtml
@@ -5,6 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div class="all-content">
+    <div class="max-width-c">
+     
 <h2>Edit</h2>
 
 
@@ -45,6 +48,8 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+        </div>
+    </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
