--- a/Projekt_Teknologji_dotNet/Views/Shared/_Layout.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Shared/_Layout.cshtml
@@ -29,9 +29,9 @@
 
                 <div class="right-content">
                     <ul>
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                        <li>@Html.ActionLink("Kreu", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Info", "About", "Home")</li>
                         @if (Request.IsAuthenticated && User.Identity.Name != "admirimkorici05@gmail.com")
                         {
                             <li>@Html.ActionLink("Rezervime", "Index", "Rezervimet")</li>
@@ -51,7 +51,7 @@
                                             <ul class="sub">
                                                 <li>@Html.ActionLink("Rezervimet", "AllReservation", "Rezervimet")</li>
                                                 <li>@Html.ActionLink("Tipi makinave", "Index", "Tipis")</li>
-                                                <li><a href="#">Perdoruesit</a></li>
+                                                <li>@Html.ActionLink("Klientet", "Klientet", "Home")</li>
                                             </ul>
                                         </li>
                                     </ul>
