--- a/Projekt_Teknologji_dotNet/Views/Rezervimet/Create.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Rezervimet/Create.cshtml
@@ -12,13 +12,13 @@
 }
 else
 {
-<h2>Create</h2>
 using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal">
     <h4>Rezervimet</h4>
+    <h2>Makina: @ViewBag.Emakine</h2>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
