Ndryshimet e fundit ne projekt. I perfunduar

--- a/Projekt_Teknologji_dotNet/Views/Home/Index.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Home/Index.cshtml
@@ -6,8 +6,9 @@
 <div class="Header-content">
     <div class="content">
         <div class="container">
-            <p>Na vizitoni per sherbimet tona</p>
-            <a class="highlight" href="#">Caktoni nje takim!</a>
+            <h1>ALBARENT</h1>
+            <h2>Albarent. Cilesi dhe siguri me makinat me te mira ne treg dhe cmime konkurruese.</h2>
+            @Html.ActionLink("Dergo nje mesazhe", "Contact", "Home", new { @class = "btn btn-primary" })
         </div>
     </div>
 </div>
