--- a/Projekt_Teknologji_dotNet/Views/Tipis/Index.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Tipis/Index.cshtml
@@ -7,10 +7,10 @@
 <div class="all-content">
     <div class="max-width-c">
 
-<h2>Index</h2>
+<h2>Tipet e makinave</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", "Tipis", new { @class = "btn btn-success"})
 </p>
 <table class="table">
     <tr>
