--- a/Projekt_Teknologji_dotNet/Content/Site.css
+++ b/Projekt_Teknologji_dotNet/Content/Site.css
@@ -10,11 +10,21 @@
     background-position: center;
     height: 100vh;
     width: 100%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+.Header-content h2 {
+    color: red;
+    margin: 70px 0;
+    width: 40%;
+}
+.Header-content .container h1 {
+    color: blue;
+    font-size: 100px;
 }
 .all-content {
-    min-height: 100vh;
-    margin-bottom: 20px;
-}
+        min-height: 100vh;
+        margin-bottom: 20px;
+    }
 
 body {
     background-color: #fff;
@@ -194,10 +204,6 @@ ul.sub {
     color: navajowhite;
 }
 
-    .content h1 {
-        color: #00c2ff;
-        margin-bottom: 0;
-    }
 
 nav {
     display: flex;
@@ -350,6 +356,9 @@ footer p {
     grid-template-columns: 2fr 2fr 2fr 2fr;
     grid-template-rows: 300px 300px 300px 300px;
     grid-gap: 30px;
+}
+.create-btn {
+    margin-top: 15px;
 }
 
 .car-cart {
