--- a/Projekt_Teknologji_dotNet/Views/Makinats/Index.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Makinats/Index.cshtml
@@ -7,6 +7,12 @@
 }
 <div class="all-content">
     <div class="max-width-c">
+        @if (Request.IsAuthenticated && User.Identity.Name == "admirimkorici05@gmail.com")
+        {
+        <p class="create-btn">
+            @Html.ActionLink("Create New", "Create", "Makinats", new { @class = "btn btn-success" })
+        </p>
+        }
         @if (ViewBag.msg != null)
         {
             <h2>@ViewBag.msg</h2>
@@ -16,9 +22,6 @@
 
             <h2>Makinat: @ViewBag.msg2</h2>
 
-            <p>
-                @Html.ActionLink("Create New", "Create")
-            </p>
             <div class="car-content">
                 @foreach (var item in Model)
                 {
@@ -33,10 +36,11 @@
                             </div>
                             <div class="b-con">
                                 <div>@Html.LabelFor(modelItem => item.Vit_Prodhimi): @Html.DisplayFor(modelItem => item.Vit_Prodhimi)</div>
-                                <div>@Html.LabelFor(modelItem => item.Kosto1Dite): @Html.DisplayFor(modelItem => item.Kosto1Dite)£</div>
+                                <div>@Html.LabelFor(modelItem => item.Kosto1Dite): @Html.DisplayFor(modelItem => item.Kosto1Dite)</div>
                             </div>
                             <div class="c-con">
-                                <div class="rezervuar">@Html.LabelFor(modelItem => item.ERezervuar) ___
+                                <div class="rezervuar">
+                                    @Html.LabelFor(modelItem => item.ERezervuar) ___
                                 @if (item.ERezervuar)
                                 {<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
                                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
@@ -48,23 +52,23 @@
                                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
                                     </svg>
                                 }
+                            </div>
+                            @if (Request.IsAuthenticated && User.Identity.Name == "admirimkorici05@gmail.com" && item.ERezervuar != true)
+                            {
+                                <div class="fshirje-btn" id="@item.ID">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-trash" viewBox="0 0 16 16">
+                                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+                                        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+                                    </svg>
                                 </div>
-                                @if (Request.IsAuthenticated && User.Identity.Name == "admirimkorici05@gmail.com")
-                                {
-                                    <div class="fshirje-btn" id="@item.ID">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-trash" viewBox="0 0 16 16">
-                                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
-                                            <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
-                                        </svg>
-                                    </div>
-                                }
-                            </div>
-                            <div class="button-area">
-                                @Html.ActionLink("See More", "Details", new { id = item.ID }, new { @class = "btn btn-primary" })
-                            </div>
+                            }
+                        </div>
+                        <div class="button-area">
+                            @Html.ActionLink("Shiko me shume", "Details", new { id = item.ID }, new { @class = "btn btn-primary" })
                         </div>
                     </div>
-                }
+                </div>
+            }
             </div>
         }
     </div>
