Shtimi i kufizimit ne metoden Delete te kontrollerit Rezervime

--- a/Projekt_Teknologji_dotNet/Views/Home/Kerko.cshtml
+++ b/Projekt_Teknologji_dotNet/Views/Home/Kerko.cshtml
@@ -26,7 +26,7 @@
                             </div>
                             <div class="b-con">
                                 <div>@Html.LabelFor(modelItem => item.Vit_Prodhimi): @Html.DisplayFor(modelItem => item.Vit_Prodhimi)</div>
-                                <div>@Html.LabelFor(modelItem => item.Kosto1Dite): @Html.DisplayFor(modelItem => item.Kosto1Dite)£</div>
+                                <div>@Html.LabelFor(modelItem => item.Kosto1Dite): @Html.DisplayFor(modelItem => item.Kosto1Dite)</div>
                             </div>
                             <div class="c-con">
                                 <div class="rezervuar">
